# RNCalculator

./: README.md  pyproject.toml
src/: RNcalculator.py  calulators.py  main.py  pyvenv.cfg
src/Scripts/: activate  activate.bat
test/: testing.py
